Fixed admin nav bar and admin spacing

--- a/frontend/src/css/Admin.css
+++ b/frontend/src/css/Admin.css
@@ -10,11 +10,23 @@
 .adminNavContainer {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  width: 100vw;
-  margin-left: -80px;
-  padding: 20px;
+  justify-content: flex-start;
+  width: 85vw;
+  padding-bottom: 30px;
+  padding-top: 40px;
 }
+@media only screen and (max-width: 768px) 
+{
+  .adminNavContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: -80px;
+    width: 100vw;
+  }
+}
+
+  
 .adminNavUnselected {
   display: inline-block; 
   margin: 10px;
@@ -45,8 +57,10 @@
 }
 
 .admin-section {
-  padding-top: 30px;
+  width: 100vw;
+  height: 90vh;
   padding-left: 80px;
+  padding-right: 80px;
 }
 
 .admin-info {
