--- a/frontend/src/css/AdminMenuItems.css
+++ b/frontend/src/css/AdminMenuItems.css
@@ -13,24 +13,25 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-right: 80px;
 }
 .aboveTableContainer{
-    min-width: 85vw;
-    max-width: 85vw;
-    height: 50px;
-    padding-bottom: 25px;
+    width: 100%;
+    min-width: 440px;
+    height: 40px;
+    margin-bottom: 25px;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-between;
 }
 .searchFilterContainer {
-    height: 100%;
+    height: 40px;
+    right: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    flex-shrink: 1;
+    padding-left: 10px;
 }
 .menuAddButton {
     font-family: 'Roboto', sans-serif !important;
@@ -38,8 +39,6 @@
     border: 1px solid var(--yellow) !important;
     color: var(--black) !important;
     font-weight: bold !important;
-    min-width: 100px;
-    max-width: 150px;
 
     height: 40px !important;
 }
@@ -50,8 +49,6 @@
 .menuFilterSelect {
     margin: 0px;
     padding: 0px;
-    margin-right: 3vw;
-    margin-left: 10vw;
     min-width: 100px;
     max-width: 200px;
     height: 40px !important;
@@ -62,10 +59,11 @@
     min-width: 100px;
     max-width: 200px;
     height: 40px !important;
+    margin-left: 10px;
 }
 .menuTableContainer {
-    min-width: 85vw;
-    max-width: 85vw;
+    min-width: 440px;
+    max-width: 100%;
     max-height: 65vh;
     overflow: scroll;
     border: 2px solid var(--black);
